<?xml version="1.0"?>
<package format="2">
  <name>lidar_localizer</name>
  <version>1.12.0</version>
  <description>The lidar_localizer package</description>
  <!-- <maintainer email="yuki@ertl.jp">kitsukawa</maintainer> -->
  <maintainer email="kin_eng@163.com">kin zhang</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>

  <depend>nav_msgs</depend>
  <depend>ndt_cpu</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>


  <depend>glog</depend>
  <depend>gflags</depend>
  <depend>eigen_conversions</depend>
  <depend>lidar_localizer_msg</depend>

</package>
